--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://scontent-atl3-2.xx.fbcdn.net/v/t1.15752-9/462574609_2195922490804183_2971394629947707707_n.png?_nc_cat=101&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeFp7MvvjjHnuB6K9gthGoCRoDGIN0ro86CgMYg3SujzoOknHxjQdz4t3f8lILnNQYLgkbr5or9zsDMIUgk0gByE&_nc_ohc=8P7F4-frURgQ7kNvgG17XMV&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-atl3-2.xx&oh=03_Q7cD1QHfHIuCK22fkmQyQApQiGFvW3I9Vb_nCG2NCy_XgxxysQ&oe=67769CF9" />
+    <link rel="icon" href="%PUBLIC_URL%/bblogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
